[tool.poetry]
name = "syncombat"
version = "0.1.0"
description = ""
authors = ["Santiago SILVA <16252054+sssilvar@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyro-ppl = "^1.8.5"
pandas = "^2.0.2"
seaborn = "^0.12.2"
patsy = "^0.5.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
pytest-mpl = "^0.16.1"
coverage-badge = "^1.1.0"
jupyter = "^1.0.0"
ruff = "^0.0.271"
statsmodels = "^0.14.0"
tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
